Fixed buttons font visibility

--- a/client/src/components/AppButton/AppButton.css
+++ b/client/src/components/AppButton/AppButton.css
@@ -25,7 +25,8 @@
 
   color: black;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
+  font-family: 'Rubik', sans-serif;
   text-align: center;
 }
 
